# rangel

./: README.md  __init__.py  collection.py  pyproject.toml  setup.py  snippets.txt
rangel/: __init__.py  collection.py
rangel/tests/: test_general.py
rangel/util/: logic.py  rasterize.py
